kafka-connect-resources/kafka-ingress-ui.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: rontest-io-ca
    cert-manager.io/duration: 2160h # 90d
    cert-manager.io/renew-before: 360h # 15d
spec:
  ingressClassName: nginx-custom-ingress
  tls:
  - hosts:
    - kafka.rontest.io
    secretName: kafka-rontest-io-key-pair
  rules:
  - host: kafka.rontest.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 80
